# lesion-metrics

./: .travis.yml  CONTRIBUTING.rst  HISTORY.rst  Makefile  README.rst  mypy.ini  pyproject.toml  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug-report.md  documentation.md  feature-request.md
.github/workflows/: python-app.yml
docs/: Makefile  conf.py  index.rst  installation.rst  lesion_metrics.cli.rst  lesion_metrics.rst  make.bat  modules.rst  usage.rst
lesion_metrics/: __init__.py  cli.py  helper.py  metrics.py  types.py  typing.py  utils.py  volume.py
lesion_metrics/cli/: aggregate.py  common.py  per_lesion.py
tests/: __init__.py  test_cli.py  test_metrics.py
