[bumpversion]
current_version = 0.1.8
commit = True
tag = True

[bumpversion:file:lesion_metrics/__init__.py]
search = __version__ = "{current_version}"
replace = __version__ = "{new_version}"

[bdist_wheel]
universal = 1

[isort]
multi_line_output = 3
include_trailing_comma = True
force_grid_wrap = 0
use_parentheses = True
ensure_newline_before_comments = True
line_length = 88

[flake8]
exclude = docs
per-file-ignores = 
	__init__.py: F401
max-line-length = 88
extend-ignore = E203

[aliases]
test = pytest

[tool:pytest]
collect_ignore = ['setup.py']

[metadata]
author = Jacob Reinhold
author_email = jcreinhold@gmail.com
name = lesion-metrics
version = attr: lesion_metrics.__version__
description = metrics for evaluating lesion segmentations
long_description = file: README.rst, HISTORY.rst
long_description_content_type = text/x-rst
keywords = lesion, metrics, segmentation, mri, ct, pet
license = Apache Software License 2.0
license_file = LICENSE
url = https://github.com/jcreinhold/lesion-metrics
project_urls = 
	Bug Tracker = https://github.com/jcreinhold/lesion-metrics/issues
	Documentation = https://lesion-metrics.readthedocs.io/
classifiers = 
	Development Status :: 4 - Beta
	Intended Audience :: Developers
	License :: OSI Approved :: Apache Software License
	Natural Language :: English
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >= 3.6
install_requires = 
	scikit-image
	scipy
setup_requires = 
	pytest-runner
test_suite = tests
tests_require = 
	nibabel
	pytest>=3
	torch

[options.packages.find]
include = 
	lesion_metrics
	lesion_metrics.*
exclude = 
	tests
	docs

[options.extras_require]
cli = 
	nibabel
	numpy
	pandas
volume = 
	torchio

[options.entry_points]
console_scripts = 
	lesion-metrics=lesion_metrics.cli:main
